[package]
name = "venmo_bank_statement_csv_corrector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {features=["polars-io", "temporal", "dtype-date"], version="0.39.1"}

[build]
target=["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
